# bluesky_notif

./: .gitignore  README.md  example_response.json  pyproject.toml
src/bluesky_notif/: main.py  obsolete.py  parser.py
tests/: test_basic.py  test_modules.py
